--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/hallo"]
 	path = themes/hallo
 	url = https://github.com/EmielH/hallo-hugo.git
+[submodule "public"]
+	path = public
+	url = git@github.com:recer/recer.github.io.git
+	branch = master
