--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
-baseurl = "http://replace-this-with-your-hugo-site.com/"
+baseurl = "http://recer.github.io"
 languageCode = "en-us"
 title = "My New Hugo Site"
-theme = "hallo"
+theme="hallo"
 
 [Author]
   name = "Reece"
